feat: initial login

--- a/src/app/shared/login/login.component.html
+++ b/src/app/shared/login/login.component.html
@@ -1,1 +1,7 @@
 <p>login works!</p>
+<p>
+  Lorem ipsum dolor sit amet consectetur adipisicing elit. In consectetur
+  expedita adipisci sequi! Molestiae iste quod reprehenderit maxime earum.
+  Nesciunt, odit laboriosam culpa perspiciatis eaque nihil sunt obcaecati quasi
+  ad?
+</p>
