featp: intial login

--- a/src/app/shared/login/login.component.html
+++ b/src/app/shared/login/login.component.html
@@ -1,7 +1,13 @@
-<p>login works!</p>
-<p>
-  Lorem ipsum dolor sit amet consectetur adipisicing elit. In consectetur
-  expedita adipisci sequi! Molestiae iste quod reprehenderit maxime earum.
-  Nesciunt, odit laboriosam culpa perspiciatis eaque nihil sunt obcaecati quasi
-  ad?
-</p>
+<div id="as-login">
+  <mat-form-field appearance="outline">
+    <mat-label>USUARIO</mat-label>
+    <input matInput />
+    <mat-icon matSuffix>sentiment_very_satisfied</mat-icon>
+  </mat-form-field>
+  <mat-form-field appearance="outline">
+    <mat-label>CONTRASEÑA</mat-label>
+    <input matInput type="password" />
+    <mat-icon matSuffix>sentiment_very_satisfied</mat-icon>
+  </mat-form-field>
+  <button mat-flat-button>ACCEDER</button>
+</div>
